feat(Backend): Empezando el OrderService y terminando el EmailService

--- a/ecommerce_api/src/main/resources/application.properties
+++ b/ecommerce_api/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.jpa.hibernate.ddl-auto=update
 jwt.security.secret-key=${JWT_SECRET}
 jwt.security.access-expiration-time=${JWT_EXPIRES_ACCESS}
 jwt.security.refresh-expiration-time=${JWT_EXPIRES_REFRESH}
+spring.mail.host=${EMAIL_HOST}
+spring.mail.port=${EMAIL_PORT}
+spring.mail.username=${EMAIL_USER}
+spring.mail.password=${EMAIL_PASS}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
